kubernetes/deployments/micro-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: micro
  namespace: test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: micro
  template:
    metadata:
      labels:
        app: micro
    spec:
      serviceAccountName: test
      containers:
      - name: micro
        image: microhq/micro:kubernetes
        args:
          - "api"
          - "--handler=rpc"
          - "--namespace=shippy"
        ports:
        - containerPort: 80
          name: port
