kubernetes/deployments/micro-service.yml
apiVersion: v1
kind: Service
metadata:
  name: micro
  namespace: test
spec:
  type: LoadBalancer
  ports:
  - name: api-http
    port: 80
    targetPort: "port"
    protocol: TCP
  selector:
    app: micro
