kubernetes/deployments/mongodb-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: test
  name: mongo
  labels:
    name: mongo
spec:
  ports:
  - port: 27017
    targetPort: 27017
  clusterIP: None
  selector:
    role: mongo
